--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     </div>
     <p id = "currentColor">Current Color: red</p>
     <script src="squareGrid.js"></script>
-    <script src="idk.js"></script>
+    <script src="eventHandler.js"></script>
 </body>
 </html>
