--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <button class="colorBtn" data-key = "rgb(238, 89, 114)" style="background-color: rgb(238, 89, 114)"></button>
     </div>
     <p id = "currentColor">Current Color: red</p>
-    <script src="squareAlgorithm.js"></script>
-    <script src="squareLists.js"></script>
+    <script src="squareClass.js"></script>
+    <script src="makingSquareLists.js"></script>
     <script src="eventHandler.js"></script>
 </body>
 </html>
