starting to make solutions for sudoku puzzles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div style="text-align: center">
-        <h1>Color Sudoku</h1>
+        <h1 >Color Sudoku</h1>
         <p>It's like <a href="https://en.wikipedia.org/wiki/Sudoku" target="_blank" style="color: lightskyblue">sudoku</a>, but with colors instead of numbers ;)</p>
         <canvas height="361" width="361" ></canvas>
     </div>
@@ -28,5 +28,6 @@
     <script src="squareClass.js"></script>
     <script src="makingSquareLists.js"></script>
     <script src="eventHandler.js"></script>
+    <script src="creatingSolutions.js"></script>
 </body>
 </html>
